 * Move backend_apt_dpkg testsuite to use Ubuntu 14.04 LTS.
 * hookutils, attach_dmesg(): Only attach dmesg as CurrentDmesg, drop BootDmesg
   as /var/log/dmesg is upstart specific and thus not reliably correct any
   more.
 * hookutils, recent_syslog(): Read system logs from the journal when running
   under systemd, and fall back to /var/log/syslog if not.

2.16.1 (2015-02-10)
-------------------
 * Set gettext translation domain in setup.cfg, so that tools like
   dh_translations pick it up and show correct polkit translations.
   Thanks to Aron Xu! (LP: #1306857)
 * Report.get_logind_session(): Check $XDG_SESSION_ID and /run/systemd/sessions
   instead of the cgroup, as the latter does not work under cgmanager.

2.16 (2015-02-06)
-----------------
Improvements/behaviour changes:
 * Add a new method ProblemReport.extract_keys() which writes binary keys
   (which can be very large) directly to files without loading them all into
   memory first. Use that in apport-unpack. Thanks Louis Bouchard!
   (LP: #1307413)
 * launchpad backend: Work with Python 3, now that launchpadlib exists for
   Python 3. (LP: #1153671)
 * apport-bug, apport-gtk: Also check for $WAYLAND_DISPLAY, to use apport-gtk
   instead of apport-cli under Wayland. Thanks Tim Lunn. (LP: #1418766)
 * apport-gtk: When running under Wayland, avoid Gdk/Wnck operation for setting
   crash window modal to the PID of the crashed window; these only work under
   X11.
 * Don't install the test suite any more, to save 1 MB of installed space. It
   can be run out of trunk easily enough, and distributions can install it from
   tests/ if they desire.

Bug fixes:
 * hookutils, attach_root_command_outputs(): Fix UnicodeDecodeError crash for
   non-textual values. (LP: #1370259)
 * ui.py: Only provide a UI to hooks if the crash db will accept the report.
   This avoids asking questions if the report is merely sent to whoopsie for
   Ubuntu stable releases. Thanks Brian Murrary. (LP: #1084979)